TLS parameterizer